--- a/orcamentos.html
+++ b/orcamentos.html
@@ -22,6 +22,7 @@
         <thead>
           <tr>
             <th>Cliente</th>
+            <th>Telefone</th>
             <th>Veículo</th>
             <th>Serviços</th>
             <th>Valor (R$)</th>
