--- a/orcamentos.html
+++ b/orcamentos.html
@@ -10,26 +10,27 @@
   <header>
     <h1>Lista de Orçamentos</h1>
     <nav>
-      <a href="index.html">Início</a>
+      <a href="index.html">Cadastro</a>
       <a href="orcamentos.html">Orçamentos</a>
     </nav>
   </header>
 
   <main>
-    <section id="listaOrcamentos">
+    <section>
       <h2>Orçamentos Registrados</h2>
-      <table>
+      <table id="tabelaOrcamentos">
         <thead>
           <tr>
+            <th>ID</th>
             <th>Cliente</th>
-            <th>Telefone</th>
             <th>Veículo</th>
             <th>Serviços</th>
             <th>Valor (R$)</th>
             <th>Status</th>
+            <th>Ações</th>
           </tr>
         </thead>
-        <tbody id="tabelaOrcamentos"></tbody>
+        <tbody></tbody>
       </table>
     </section>
   </main>
