--- a/index.html
+++ b/index.html
@@ -1,66 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gerenciamento de Orçamentos para Mecânica</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cadastro - Mecânica</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Gerenciamento de Orçamentos para Mecânica</h1>
+    <h1>Gerenciamento de Orçamentos</h1>
     <nav>
-      <a href="index.html">Início</a>
+      <a href="index.html">Cadastro</a>
       <a href="orcamentos.html">Orçamentos</a>
     </nav>
   </header>
 
   <main>
-    <!-- Cadastro -->
+    <!-- CADASTRO -->
     <section id="cadastro">
       <h2>Cadastro de Cliente e Veículo</h2>
       <form id="formCadastro">
         <label>Nome do Cliente:</label>
-        <input type="text" id="cliente" required>
+        <input type="text" id="cliente" required />
 
         <label>Número de Contato:</label>
-        <input type="tel" id="telefone" placeholder="(XX) XXXXX-XXXX" required>
+        <input type="tel" id="telefone" placeholder="(XX) XXXXX-XXXX" required />
 
         <label>Modelo do Veículo:</label>
-        <input type="text" id="veiculo" required>
+        <input type="text" id="veiculo" required />
 
         <label>Placa:</label>
-        <input type="text" id="placa" required>
+        <input type="text" id="placa" required />
 
-        <button type="submit">Cadastrar</button>
+        <button type="submit">Cadastrar Cliente</button>
       </form>
     </section>
 
-    <!-- Avaliação -->
+    <hr />
+
+    <!-- ORÇAMENTO -->
     <section id="avaliacao">
-      <h2>Avaliação de Serviços</h2>
+      <h2>Gerar Orçamento</h2>
       <form id="formAvaliacao">
-        <label>Serviços Necessários:</label>
-        <textarea id="servicos" required></textarea>
+        <label>Serviços:</label>
+        <input type="text" id="servicos" required />
 
         <label>Valor Estimado (R$):</label>
-        <input type="number" id="valor" required>
+        <input type="number" id="valor" required />
 
-        <button type="submit">Gerar Orçamento</button>
+        <button type="submit">Criar Orçamento</button>
       </form>
-    </section>
 
-    <!-- Orçamento -->
-    <section id="orcamento">
-      <h2>Orçamento Gerado</h2>
       <div id="orcamentoInfo"></div>
       <button id="aprovarBtn" class="hidden">Aprovar Orçamento</button>
-    </section>
 
-    <!-- Status -->
-    <section id="status" class="hidden">
-      <h2>Status dos Serviços</h2>
-      <p id="statusTexto"></p>
+      <section id="status" class="hidden">
+        <h3>Status</h3>
+        <p id="statusTexto"></p>
+      </section>
     </section>
   </main>
 
